# Dlib-Android-1

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: VideoFaceDetector.cpp  native-lib.cpp
app/src/main/cpp/dlib/: CMakeLists.txt  config.h
app/src/main/cpp/dlib/image_loader/: jpeg_loader.cpp
app/src/main/cpp/include/: VideoFaceDetector.h
app/src/main/java/com/orange/opencv/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
